--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 body {
   background: peachpuff;
 }
+
+#display {
+  border-radius:5px;
+  border-color:black;
+  border-style: solid;
+  background:lightblue;
+}
+
+#name {
+  font-size: large;
+}
+
+#name-and-title {
+  background-color: darkblue;
+  color: white;
+}
